--- a/Tema7/Bol7_Ejer2/Bol7_Ejer2/Components.csproj
+++ b/Tema7/Bol7_Ejer2/Bol7_Ejer2/Components.csproj
@@ -51,5 +51,10 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="AlertLabel.resx">
+      <DependentUpon>AlertLabel.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
